# Rust-UDP-To-Kafka-Forwarding

./: Cargo.toml  README.md
src/: main.rs
tasks/: Cargo.toml  build.rs
tasks/src/: lib.rs
tasks/src/dispatcher/: mod.rs
tasks/src/manager/: mod.rs
tasks/src/proto/: message.proto
tasks/src/receiver/: mod.rs
tasks/src/sender/: mod.rs
tasks/src/statistics/: mod.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
utilities/src/env_var/: mod.rs
utilities/src/logger/: mod.rs
utilities/src/statistics/: mod.rs
