[package]
name = "udp_to_kafka_forwarding"
version = "0.1.0"
edition = "2021"

[workspace]

[workspace.dependencies]  
coarsetime = "0.1"
derive-new = "0.5"
nohash-hasher = "0.2"
branches = "0.1"

[dependencies]
utilities = {path = "utilities"}
tasks = {path = "tasks"}
mimalloc = { version = "*", default-features = false }


[profile.release]
lto = true
strip = true
panic = "abort"
