[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
utilities = {path = "../utilities"}

fastrand = "1.9"
async-trait = "0.1"
ustr = "0.9"
tokio = { version = "1.2", features = ["full"] }
tokio-util = "0.7"
rdkafka = { version = "0.29", features = ["cmake-build","zstd-pkg-config"] }
kanal = "0.1.0-pre8"
rclite = "0.2"
prost = "0.11"
prost-types = "0.11"
tokio-dtls-stream-sink = "0.6"
openssl = { version = "0.10", features = ["vendored"] }
cached = "0.42"
coarsetime= {workspace = true}
nohash-hasher = {workspace = true}
derive-new = {workspace = true}
branches = {workspace = true}

[build-dependencies]
prost-build = "0.11"